tests/src/frontend/expand/invalid/macro_method_signature.sk
class C{} {
  fun f(): #T {
    void
  }
}

fun main(): void {
  void
}
